CAN_Board.cydsn/BUILD.log
--------------- Build Started: 04/15/2023 15:25:01 Project: CAN_Board, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
In file included from main.c:17:0:
UART_interface.c: In function 'printPacket':
UART_interface.c:63:5: warning: implicit declaration of function 'sprintf' [-Wimplicit-function-declaration]
     sprintf(info,"id: %#02X ",packetID);
     ^
UART_interface.c:63:5: warning: incompatible implicit declaration of built-in function 'sprintf'
UART_interface.c:63:5: note: include '<stdio.h>' or provide a declaration of 'sprintf'
UART_interface.c:70:26: warning: format '%i' expects argument of type 'int', but argument 5 has type 'long int' [-Wformat=]
             sprintf(info,"SN: %#02X TTC: %#02X data: %i",packet->data[1],packet->data[2],(int32_t) decodeFromBytes(3,6,packet->data));
                          ^
In file included from main.c:18:0:
CAN_Stuff.h: At top level:
CAN_Stuff.h:37:3: error: conflicting types for 'CANPacket'
 } CANPacket;
   ^
In file included from CAN_Stuff.c:13:0,
                 from UART_interface.c:15,
                 from main.c:17:
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
CAN_Stuff.h:37:3: note: previous declaration of 'CANPacket' was here
 } CANPacket;
   ^
In file included from main.c:18:0:
CAN_Stuff.h:39:5: error: conflicting types for 'SendCANPacket'
 int SendCANPacket(CANPacket *packetToSend);
     ^
In file included from UART_interface.c:15:0,
                 from main.c:17:
CAN_Stuff.c:44:5: note: previous definition of 'SendCANPacket' was here
 int SendCANPacket(CANPacket *packetToSend)
     ^
main.c: In function 'main':
main.c:62:27: warning: passing argument 1 of 'parseLine' from incompatible pointer type [-Wincompatible-pointer-types]
                 parseLine(&p, uart_rx+1);
                           ^
In file included from main.c:17:0:
UART_interface.c:36:11: note: expected 'CANPacket * {aka struct <anonymous> *}' but argument is of type 'CANPacket * {aka struct <anonymous> *}'
 CANPacket parseLine(CANPacket* p, char8 line[]) {
           ^
main.c:65:17: warning: incompatible implicit declaration of built-in function 'sprintf'
                 sprintf(uart_tx,"%03X %02X ",p.id,p.dlc);
                 ^
main.c:65:17: note: include '<stdio.h>' or provide a declaration of 'sprintf'
main.c:79:37: warning: passing argument 1 of 'PollAndReceiveCANPacket' discards 'volatile' qualifier from pointer target type [-Wdiscarded-qualifiers]
         if (PollAndReceiveCANPacket(&packet) == ERROR_NONE) {
                                     ^
In file included from UART_interface.c:15:0,
                 from main.c:17:
CAN_Stuff.c:136:5: note: expected 'CANPacket * {aka struct <anonymous> *}' but argument is of type 'volatile CANPacket * {aka volatile struct <anonymous> *}'
 int PollAndReceiveCANPacket(CANPacket *receivedPacket)
     ^
main.c:80:13: warning: incompatible implicit declaration of built-in function 'sprintf'
             sprintf(uart_tx,"%03X %02X ",packet.id,packet.dlc);
             ^
main.c:80:13: note: include '<stdio.h>' or provide a declaration of 'sprintf'
main.c:35:11: warning: unused variable 'txData' [-Wunused-variable]
     char8 txData[8];
           ^
In file included from main.c:17:0:
UART_interface.c: In function 'parseLine':
UART_interface.c:47:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
--------------- Build Failed: 04/15/2023 15:25:01 ---------------
